[gd_scene load_steps=21 format=2]

[ext_resource path="res://res/particles/64h.png" type="Texture" id=1]
[ext_resource path="res://src/Arena/Goal.gd" type="Script" id=2]
[ext_resource path="res://res/light.png" type="Texture" id=3]
[ext_resource path="res://src/Arena/GoalArea.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 96 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 96 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 512 )

[sub_resource type="Gradient" id=23]
offsets = PoolRealArray( 0, 0.925466 )
colors = PoolColorArray( 0.858824, 0.858824, 0.858824, 1, 0.858824, 0.858824, 0.858824, 0 )

[sub_resource type="GradientTexture" id=24]
gradient = SubResource( 23 )

[sub_resource type="Curve" id=5]
max_value = 0.1
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.0869565, 0.1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0265909 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 64.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_random = 0.58
scale_curve = SubResource( 6 )
color_ramp = SubResource( 24 )

[sub_resource type="Gradient" id=19]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=20]
gradient = SubResource( 19 )

[sub_resource type="Curve" id=21]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.0869565, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=22]
curve = SubResource( 21 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1200.0
initial_velocity_random = 0.95
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 180.0
damping_random = 0.38
scale = 0.1
scale_random = 0.22
scale_curve = SubResource( 22 )
color = Color( 0.858824, 0.858824, 0.858824, 1 )
color_ramp = SubResource( 20 )

[sub_resource type="OccluderPolygon2D" id=17]
polygon = PoolVector2Array( -32, -512, 32, -512, 32, 512, -32, 512 )

[sub_resource type="OccluderPolygon2D" id=18]
polygon = PoolVector2Array( 0, 0, 192, 0, 192, 32, 0, 32 )

[node name="Goal" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -72, 0 )
shape = SubResource( 1 )

[node name="Inside" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Inside"]
position = Vector2( -192, -112 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Inside"]
position = Vector2( -152, 0 )
rotation = -1.57079
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Inside"]
position = Vector2( -192, 112 )
shape = SubResource( 2 )

[node name="Cover" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cover"]
position = Vector2( -32, 0 )
shape = SubResource( 3 )

[node name="Walls" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2( -32, 608 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2( -32, -608 )
shape = SubResource( 4 )

[node name="Particles1" type="Particles2D" parent="."]
position = Vector2( -8, -96 )
z_index = 2
amount = 16
preprocess = 16.0
speed_scale = 0.4
process_material = SubResource( 7 )
texture = ExtResource( 1 )

[node name="Particles2" type="Particles2D" parent="."]
position = Vector2( -8, 96 )
z_index = 2
amount = 16
preprocess = 16.0
speed_scale = 0.4
process_material = SubResource( 7 )
texture = ExtResource( 1 )

[node name="ScoreParticles1" type="Particles2D" parent="."]
position = Vector2( -104, 96 )
emitting = false
amount = 32
lifetime = 1.4
one_shot = true
explosiveness = 0.93
visibility_rect = Rect2( -200, -200, 400, 400 )
process_material = SubResource( 9 )
texture = ExtResource( 1 )

[node name="ScoreParticles2" type="Particles2D" parent="."]
position = Vector2( -104, -96 )
emitting = false
amount = 32
lifetime = 1.4
one_shot = true
explosiveness = 0.93
visibility_rect = Rect2( -200, -200, 400, 400 )
process_material = SubResource( 9 )
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
texture_scale = 2.0
shadow_enabled = true
shadow_filter = 5

[node name="LightOccluder2D2" type="LightOccluder2D" parent="."]
position = Vector2( -32, -608 )
occluder = SubResource( 17 )

[node name="LightOccluder2D3" type="LightOccluder2D" parent="."]
position = Vector2( -32, 608 )
occluder = SubResource( 17 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( -256, -128 )
occluder = SubResource( 18 )

[node name="LightOccluder2D5" type="LightOccluder2D" parent="."]
position = Vector2( -224, -96 )
rotation = 1.57079
occluder = SubResource( 18 )

[node name="LightOccluder2D4" type="LightOccluder2D" parent="."]
position = Vector2( -256, 96 )
occluder = SubResource( 18 )

[node name="Score" type="Node2D" parent="."]
position = Vector2( 64, 0 )
z_index = -4
__meta__ = {
"_edit_lock_": true
}

[node name="PipTween" type="Tween" parent="."]

[node name="Spawns" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Spawn1" type="Position2D" parent="Spawns"]
position = Vector2( 96, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spawn2" type="Position2D" parent="Spawns"]
position = Vector2( 96, -64 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spawn3" type="Position2D" parent="Spawns"]
position = Vector2( 96, 64 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spawn4" type="Position2D" parent="Spawns"]
position = Vector2( 96, -128 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spawn5" type="Position2D" parent="Spawns"]
position = Vector2( 96, 128 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spawn6" type="Position2D" parent="Spawns"]
position = Vector2( 96, -192 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spawn7" type="Position2D" parent="Spawns"]
position = Vector2( 96, 192 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spawn8" type="Position2D" parent="Spawns"]
position = Vector2( 96, -256 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spawn9" type="Position2D" parent="Spawns"]
position = Vector2( 96, 256 )
__meta__ = {
"_edit_lock_": true
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -8, 0 )
rect = Rect2( -16, -16, 32, 32 )
__meta__ = {
"_edit_lock_": true
}
